# lanna

./: .gitignore  README.md  articles.txt  books.txt  pyproject.toml
src/: bins.py  serialize.py  tspm.py
src/utils/: preprocess.py  scrapper.py
token/: lanna.model  lanna.vocab
